2000-01-26  Dave Camp  <campd@oit.edu>
	
	* gnome-bonobo-check.m4 Include <bonobo.h> rather than 
	<bonobo/gnome-object.h>

2000-01-26  Dave Camp  <campd@oit.edu>

	* gnome-bonobo-check.m4: Check for bonobo_object_get_type() rather 
	than gnome_object_get_type().

2000-01-23  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4: i broke the version-checking macro for other
	distribs in my last commit. fixing that now.

2000-01-22  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): fix the version-checking macro for
	debian

2000-01-20  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-objc-checks.m4: Look for sched_yield in -lrt, too.
	Suggested by Drazen Kazar <dave@srce.hr>.

2000-01-16  Vadim Strizhevsky  <vadim@optonline.net>

	* gnome-pilot.m4: Fix typo in PILOT_LINK_HOOK.

2000-01-15  Eskil Heyn Olsen  <deity@eskil.dk>
	
	* gnome-pilot.m4: PILOT_LINK_HOOK now check pilot-link version.
	GNOME_PILOT_CHECK defaults to requiring 0.9.3.
	
2000-01-09  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Applied patch from R. Bernstein
	<rocky@panix.com> - print a better error message when
	LibGTop's major version number mismatches.

1999-12-25  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pilot.m4: Applied patch from Colin Walters to make
	it compile under Debian GNU/Linux.

1999-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4: Removed all guile variables.

1999-11-18  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* gnome-xml-check.m4: Better scoping of below fix.

1999-11-16  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* gnome-xml-check.m4: always AC_SUBST GNOME_XML_LIB, so that
	output variable will always be present.

1999-11-09  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4: uses test -r instead of test -e, was reported as 
	a portability bug wrt solaris.

1999-10-31  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4: added PILOT_LINK_CHECK, used by